industrialgiudecca/src/css/FactoryHomepage.css
:root { 
    --img-height: 30vh; /* Height of the images for each factory */
}


/* src/css/FactoryHomepage.css */
.factory-homepage {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f8f8f8;
}

#title { 
    margin: 0;
    color: #333333;
    text-align: center;
    padding: 1% 0;
    font-family: "Judson";
    font-size: 3vw;
}

main {
    margin: 0 auto;
    background-color: #f8f8f8;
    padding: 7vh 2%;
}

.title-hr { 
    width: 50%;
}

.landscape-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20vw, 1fr));
    gap: 2vw;
    padding-top: 2%;
    margin-top: 4%;
    background-color: #f8f8f8;
}

.landscape-item {
    font-family: "Lato";
    font-size: 1vw;
    text-align: center;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 0.75vw 1vw rgba(0, 0, 0, 0.1);
    overflow: hidden;
    transition: transform 0.3s ease;
}

.landscape-item:hover {
    transform: translateY(-1vw);
}

.landscape-placeholder {
    width: 100%;
    height: var(--img-height);
    background-color: #eeeeee;
    margin-bottom: 1vh;
    background-color: rgb(110, 110, 110);
}

.factory-image { 
    width: 100%;
    height: var(--img-height);
}


footer {
    background-color: #ffffff;
    padding: 1.5vw;
    text-align: center;
    font-size: 2vw;
    color: #666666;
    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
}

footer p {
    margin: 0;
}

